--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 # Only trigger when a PR is committed.
 name: Linux Build All Arches
 #on: [pull_request]
-on:
-  pull_request:
-    types: [closed]
-    branches:
-      - master
+push:
+  branches:
+      - main
+      paths:
+        - **
 
 jobs:
   build:
