--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Linux Build All Arches
-
 on:
-  push:
+  pull_request:
     branches:
       - main
     paths:
@@ -12,45 +11,45 @@ jobs:
     name: Build
     runs-on: ubuntu-20.04
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '^1.23'
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4
 
-      - run: go version
+    - uses: actions/setup-go@v4
+      with:
+        go-version: '^1.23'
 
-      - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-          sudo apt-get update
-          sudo apt-get upgrade -y
-          sudo apt-get install -y mingw-w64-x86-64-dev gcc-mingw-w64-x86-64 gcc-mingw-w64 gcc-aarch64-linux-gnu
+    - run: go version
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+    - name: Get dependencies
+      run: |
+        go get -v -t -d ./...
+        sudo apt-get update
+        sudo apt-get upgrade
+        sudo apt-get install mingw-w64-x86-64-dev gcc-mingw-w64-x86-64 gcc-mingw-w64 gcc-aarch64-linux-gnu
 
-      - name: npm install gui
-        run: |
-          cd gui/velociraptor/
-          npm install
-          npm run build
-          cd ../../
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Build All Architectures
-        run: |
-          mkdir ./output/
-          export PATH=$PATH:~/go/bin/
-          go run make.go -v UpdateDependentTools
-          go run make.go -v Linux
-          go run make.go -v Windows
+    - name: npm install gui
+      run: |
+            cd gui/velociraptor/
+            npm install
+            npm run build
+            cd ../../
 
-      - name: Store Binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: Binaries
-          path: output
+    - name: Build All Architectures
+      run: |
+        mkdir ./output/
+        export PATH=$PATH:~/go/bin/
+        go run make.go -v UpdateDependentTools
+        go run make.go -v Linux
+        go run make.go -v Windows
+
+    - name: StoreBinaries
+      uses: actions/upload-artifact@v4
+      with:
+        name: Binaries
+        path: output
