--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
         go run make.go -v UpdateDependentTools
         go run make.go -v Linux
         go run make.go -v Windows
+        go run make.go -v Windowsx86
 
     - name: StoreBinaries
       uses: actions/upload-artifact@v4
